assets/styles/_main.scss
/*NavBar*/

#navbar{
    img{
        width: 150px;
    }
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    #burger{
        background-color: $thirdColor;
        border-radius: 50%;
        z-index: 1;
        width: 90px;
        height: 90px;
        margin-right: 1em;
        span{
            display: block;
            margin: auto;
            margin-top: 2.7em;
            height: 2px;
            width: 60px;
            background-color: black;
            position: relative;
            &::after,&::before{
                content: '';
                display: block;
                height: 2px;
                position: absolute;
                background-color: black;
            }
            &::after{  
                width: 30px;
                top: 15px;
            }
            &::before{
                width: 60px;
                top: -15px;
            }
            transition: all 0.2s ease-in-out;
        }
        &.active{
            margin-right: 0;
            padding-right: 1em;
            padding-top: 1em;
            background-color: transparent;
            span{
                background-color: $primaryColor;
                transform: rotateZ(45deg) translateX(1px) translateY(-40px);
                &::after{
                    opacity: 0;
                }
                &::before{
                    background-color: $primaryColor;
                    transform: rotateZ(90deg) translateX(15px);
                }
            }
        }
    }
    ul{
        display: flex;
        flex-direction: column;
        position: absolute;
        right: -2px;
        border-radius: 5px;
        top: 20px;
        background-color: $secondaryColor;
        padding:4em 1em;
        border: 2px solid $primaryColor;
        gap: 2em;
        font-family: 'Alegreya';
        a{
            color: $thirdColor;
            text-decoration: underline;
            font-size: 18px;
            &:hover{
                color: $primaryColor;
            }
        }
        transform: translateX(100%);
        transition: all ease 0.2s;
        &.active{
            transform: translateX(0%);
        }
    }
}

/*Header Banner*/
.header-banner{
    text-align: center;
    gap: 2em;
    background-image: url('/public/image/v-rising.jpg');
    background-position: center;
    padding: 6em;
    background-size: cover;
}

/*Main content*/ 
.main-content{
    width: 85%;
    margin:2em auto;
    display: flex;
    align-items: flex-start;
}

/* Search Container */
body{
    position: relative;
}

.search-container{
    .toggle-search{
        position: absolute;
        right: 0;
        top: 50px;
        transform: translateX(70%) rotateZ(90deg) translateY(-5%);
        background-color: $primaryColor;
        padding: 5px 10px;
        border-radius: 10px;
        color: white;
    }
    position: absolute;
    z-index: 1;
    left : 0;
    border: 2px solid $primaryColor;
    max-width: 450px;
    width: 70%;
    padding: 1em;
    form{
        display: flex;
        flex-direction: column;
        align-items: stretch;
        margin-top: 2em;
        padding: 0 10px;
        gap: 1em;
        div{
            display: flex;
            gap: 2em;
            justify-content: space-between;
        }
        #searchBtn{
            margin: auto;
        }
    }
    background-color: #112634;
    transform: translateX(-100.5%);
    transition: 0.3s ease-in-out all;
    &.active{
        transform: translateX(0%);
    }
}

/*Server Container*/

.server-container{
    margin:1em auto;
    >div:first-child{
        margin-top: 0;
    }
}

/*server card*/
.server-card{
    .btn{
        text-align: center;
    }
    display: flex;
    flex-direction: row;
    margin: auto;
    margin-top: 1em;
    background-color: #E7E7E7;
    gap: 1em;
    .card-left{
        padding: 1em;
        width: 50%;
        h4{
            margin-bottom: 2em;
            color: #AB2B1D;
            font-size: 22px;
        }
        p{
            color: black;
            word-break: break-word;
        }
    }
    .card-right{
        width: 40%;
        background-color: #F4F4F4;
        display:flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 1em;
        padding: 5px 0;
        .review-info{
            color:black;
            font-family: 'Alegreya';
            font-weight: 500;
        }
    }
}

.deleteBtn{
    width: 35%;
    margin: auto;
    button{
        margin-top: 1em;
        width: 100%;
        margin:1em auto;
    }
}



.star-container{
    display: flex;
    color: black;
    &>div{
        width: 20px;
        clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
    }
    .full-star{
        background-color: #DC3622;
        color: #DC3622;
    }

    .empty-star{
        background-color: $thirdColor;
    }
}
/* ... */

